# aigis

./: .aigis.yaml  .gitignore  CLAUDE.md  LICENSE  README.md  northStar.txt  pyproject.toml  report_superpowers.html
.github/workflows/: aigis.yml
docs/: RELEASE_NOTES_v0.2.0.md  aeg003_post_ag2_validation.md  framework_scorecard.md  issues_seed.md  launch_checklist.md  media_plan.md  release_readiness.md  repo_positioning.md  roadmap.md  roadmap_issues.md
examples/: .aigis.yaml  safe_agent.py  unbounded_agent.py  unbounded_retry.py  unsafe_tool.py
project-state/: manifest.json  project.yaml
project-state/artifacts/: init_cheatsheet.md
src/aigis/: __init__.py  analyzer.py  baseline.py  cli.py  config.py  graph.py  models.py  output.py  output_html.py  policy.py  suppression.py  surface.py
tests/: conftest.py  test_analyzer.py  test_baseline.py  test_cli.py  test_output.py  test_rules.py  test_suppression.py
tests/fixtures/: autogen_exec_budget.py  autogen_groupchat_manager_propagation.py  autogen_initiate_group_chat_safe.py  autogen_initiate_group_chat_unsafe.py  autogen_no_exec_budget.py  autogen_safe.py  autogen_unsafe.py  crewai_safe.py  crewai_unsafe.py  custom_approval.py  dynamic_tools.py  exec_budget_wrong_var.py  false_positive_edge.py  inline_suppression.py  langgraph_config_var_budget.py  langgraph_exec_budget.py  langgraph_interrupt_false_positive.py  langgraph_interrupt_safe.py  langgraph_safe_patterns.py  literal_prompt.py  llm_in_loop.py  llm_in_loop_safe.py  misleading_names.py  mutable_prompt.py  nested_wrappers.py  openai_agents_exec_budget.py  (+27 more)
(+36 files in other folders)
