[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigis-lint"
version = "0.2.0"
description = "AI Execution Governance Linter — static analysis for unsafe AI autonomy"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "governance", "linter", "security", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/tyreamer/aigis"
Repository = "https://github.com/tyreamer/aigis"
Issues = "https://github.com/tyreamer/aigis/issues"

[project.scripts]
aigis = "aigis.cli:app"
aeg = "aigis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/aigis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
